--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,28 +3,69 @@
 }
 
 body{
-    background: rgb(129, 78, 78);
+    background: rgb(255, 255, 255);
     justify-content: center;
     // height: 1366px;
     position: relative;
 }
 
+
 // HEADER
+
+.nav-item.dropdown:hover > ul.dropdown-menu.multi-level{
+  display: block;
+}
+
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu>.dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  -webkit-border-radius: 0 6px 6px 6px;
+  -moz-border-radius: 0 6px 6px;
+  border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+  display: block;
+}
+
+.dropdown-submenu>a:after {
+  display: block;
+  content: " ";
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #ccc;
+  margin-top: 5px;
+  margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+  border-left-color: #fff;
+}
+
+
+
 header.navbar{
   position: fixed;
   width: 100%;
   background: white;
   height: 58px;
   z-index: 999;
-  // opacity: 1;
 }
 a.navbar-brand span:first-child{
   color: #503392;
-  // font-size: 1.6rem;
 }
 a.navbar-brand span:nth-child(2){
   color: #009dda;
-  // font-size: 1.6rem;
 }
 a.nav-link{
   color: black;
@@ -33,7 +74,7 @@ ul.dropdown-menu.show{
   cursor: pointer;
 }
 li.nav-item.dropdown.show a.nav-link{
-  font-weight: 500;
+  // outline: 1px solid rgb(194, 194, 194);
   color: black;
   background-color: white;
 }
@@ -41,15 +82,12 @@ a.nav-link{
   color: black;
   background-color: white;
 }
-// ul.nav.nav-pills{
-//   background-color: red;
-//   margin-left: 50px;
-// }
-// div.input-group{
-//   background: red;
-// }
+li.nav-item a.nav-link{
+  border-radius: 0;
+}
 ul li.nav-item:nth-child(1){
   padding-right: 10px;
+  border-bottom: 2px solid rgb(255, 255, 255);
 }
 ul li.nav-item:nth-child(2){
   padding-right: 10px;
@@ -71,10 +109,26 @@ ul li.nav-item:nth-child(5) div.input-group input.form-control, ul li.nav-item:n
   border: 1px solid #e8e4f1;
 }
 ul li.nav-item:nth-child(5) div.input-group div.input-group-append span#basic-addon2.input-group-text img{
-  // padding-left: 20px;
-  // padding-right: 3px;
   width: 30px;
   transform: scale(0.44);
+}
+
+
+// Sub-header slider
+article.sub-header-slider div.carousel-caption.d-none.d-md-block{
+  margin-bottom: 225px;
+}
+article.sub-header-slider div.carousel-caption.d-none.d-md-block p.creative-title{
+  font-size: 3.5rem;
+}
+article.sub-header-slider div.carousel-caption.d-none.d-md-block p.creative-title span{
+  color: #fff200;
+  padding-left: 15px;
+}
+article.sub-header-slider div.carousel-caption.d-none.d-md-block p.creative-description{
+  padding-left: 150px;
+  padding-right: 150px;
+  opacity: 0.3;
 }
 
 ol.carousel-indicators li{
@@ -82,13 +136,43 @@ ol.carousel-indicators li{
   height: 5px;
   border-radius: 50%;
 }
-
+// .carousel-control-next-icon, .carousel-control-prev-icon {
+//   padding: 22px;
+//   background-color: #c5c5c5;
+// }
 
 div.container{
-  color: red;
   padding-left: 90px;
   padding-right: 95px;
 }
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 50px;
+  width: 50px;
+  background-size: 100%, 100%;
+  background-image: none;
+  background-color: #d4d1d1;
+  
+}
+.carousel-control-next-icon:after{
+  content: '>';
+  font-size: 25px;
+  color: rgb(255, 255, 255);
+  position: relative;
+  top: 5px;
+  justify-content: center;
+    
+}
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 25px;
+  color: rgb(255, 255, 255);
+  position: relative;
+  top: 5px;
+  justify-content: center;
+}
+
 
 
 // MAIN
@@ -101,12 +185,12 @@ div.col{
   padding: 0;
   margin: 0;
 }
-div.col img{
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-}
+// div.col img{
+//   width: 100%;
+//   display: flex;
+//   flex-direction: row;
+//   align-content: center;
+// }
 div.carousel-item{
   display: flex;
   flex-direction: row;
@@ -115,16 +199,97 @@ div.carousel-item{
 
 div.row.why-shoose-us{
   height: 577px;
-  background: #503392;
+  background: #000000;
 }
-div.row.our-producs{
-  height: 707px;
-  background: #1b9403;
+
+// Our products
+article.our-producs{
+  position: relative;
 }
-div.row.about-us{
-  height: 710px;
-  background: #cac701;
+
+article.our-producs img.overlay{
+  position: absolute;
+  width: 100%;
+  top: 0px;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
 }
+
+article.our-producs div.title-our-products{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  top: -675px;
+  font-size: 1.9rem;
+  font-family: 'Lato Bold';
+}
+article.our-producs div.title-our-products span.our{
+  color: #fff;
+}
+article.our-producs div.title-our-products span.products{
+  color: #ffff00;
+  text-indent: 10px;
+}
+
+article.our-producs ol.carousel-indicators li{
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #d7d7d7;
+}
+
+article.our-producs ol.carousel-indicators li.active{
+  background-color: #503392;
+}
+
+.product1, .product2, .product3, .product4, .product5, .product6{
+  transform: scale(0.7);
+  padding: 0;
+  margin: 0;
+  float: left;
+}
+
+.product1, .product2, .product3{
+  margin-bottom: 40px;
+}
+p.title-item, p.best-product-item,
+p.description-item{
+  color: black;
+  text-align: left;
+}
+
+article.our-producs div.carousel-caption.d-none.d-md-block{
+  margin-bottom: 100px;
+}
+
+
+// article.our-producs div.row.our-producs-header{
+//   background: #fff;
+// }
+// article.our-producs div.row.our-producs-header .col .title-our-products{
+//   position: relative;
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
+//   top: -107px;
+//   font-size: 1.9rem;
+//   font-family: 'Lato Bold';
+// }
+// article.our-producs div.row.our-producs-header .col .title-our-products span.our{
+//   color: #fff;
+// }
+// article.our-producs div.row.our-producs-header .col .title-our-products span.products{
+//   color: #ffff00;
+//   text-indent: 10px;
+// }
+// article.our-producs div.row.our-products-body{
+//   height: 525px;
+//   background: #fff;
+// }
+
+// Contacs
 article.get-in-touch{
   height: 231px;
   background: #ffffff;
@@ -190,18 +355,107 @@ article.socials div.container-fluid div.row div.col:nth-child(2){
 }
 
 
-.progress {
-  margin-bottom: 20px;
+// .progress {
+//   margin-bottom: 20px;
+// }
+
+// .bg-purple {
+  //   background-color: #825CD6 !important;
+  // }
+  
+  
+  
+  
+  
+  
+  
+  .nav-pills li>a:hover,.nav-pills li>a:focus,.nav-pills li.active {
+    background-color:#ef9a38;
+  }
+  li.nav-item a.nav-link.active{
+    border-bottom: 2px solid rgb(217, 255, 0);
+    color: #000000;
+    background: rgb(255, 255, 255);
+  }
+  
+  
+  // About us
+  // div.row.about-us{
+  //   height: 710px;
+  //   background: #ffffff;
+  // }
+
+  article.about-us div.container{
+    padding-left: 118px;
+    padding-right: 110px;
+  }
+  article.about-us div.container .row .col .row .col{
+    background: rgb(255, 255, 255);
+    padding-right: 41px;
+  }
+  article.about-us div.container .row .col{
+    background: #ffffff;
+  }
+  article.about-us div.container .row .col img{
+    position: relative;
+    transform: scale(0.64);
+    top: 14px;
+    left: 86px;
+    padding-left: 6px;
+  }
+  
+  
+  // progress bar
+  .progress-bar {
+    width: 0;
+  }
+  .progress .progress-bar {
+    transition: unset;
+  }
+
+  .skill h4 {
+  color: #5f5d5d;
+  font-size: 22px;
+  font-weight: 400;
+  margin-bottom: 20px
 }
 
-.progress-bar {
-  width: 0;
+#skills .skill .progress {
+  overflow: visible;
+  background-color: #ddd;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  height: 5px;
 }
 
-.bg-purple {
-  background-color: #825CD6 !important;
+#skills .skill .progress .progress-bar {
+  background-color: #498bfc;
+  position: relative;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
 }
 
-.progress .progress-bar {
-  transition: unset;
+#skills .skill .progress .progress-bar .percent {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  background-color: #498bfc;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  top: -15px;
+  right: -20px;
+  font-size: 16px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
+
+#skills .skill + .skill {
+  margin-top: 35px;
+}
+
+
+
