--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,51 +1,42 @@
-*:hover {
-  outline: 1px dashed red; }
-
 body {
   background: white;
   justify-content: center;
   position: relative; }
 
-.nav-item.dropdown:hover > ul.dropdown-menu.multi-level {
-  display: block; }
+div.container {
+  padding-left: 90px;
+  padding-right: 95px; }
 
-.dropdown-submenu {
-  position: relative; }
+@font-face {
+  font-family: BEYNO;
+  src: url(/font/BEYNO.ttf); }
 
-.dropdown-submenu > .dropdown-menu {
-  top: 0;
-  left: 100%;
-  margin-top: -6px;
-  margin-left: -1px;
-  -webkit-border-radius: 0 6px 6px 6px;
-  -moz-border-radius: 0 6px 6px;
-  border-radius: 0 6px 6px 6px; }
+@font-face {
+  font-family: Lato-Regular;
+  src: url(/font/Lato-Regular.ttf); }
 
-.dropdown-submenu:hover > .dropdown-menu {
-  display: block; }
+@font-face {
+  font-family: Lato-Heavy;
+  src: url(/font/Lato-Heavy.ttf); }
 
-.dropdown-submenu > a:after {
-  display: block;
-  content: " ";
-  float: right;
-  width: 0;
-  height: 0;
-  border-color: transparent;
-  border-style: solid;
-  border-width: 5px 0 5px 5px;
-  border-left-color: #ccc;
-  margin-top: 5px;
-  margin-right: -10px; }
+@font-face {
+  font-family: Lato-Light;
+  src: url(/font/Lato-Light.ttf); }
 
-.dropdown-submenu:hover > a:after {
-  border-left-color: #fff; }
+@font-face {
+  font-family: Lato-Bold;
+  src: url(/font/Lato-Bold.ttf); }
 
 header.navbar {
   position: fixed;
   width: 100%;
   background: white;
-  height: 58px;
+  height: 60px;
   z-index: 999; }
+
+a.navbar-brand span {
+  font-family: BEYNO;
+  font-size: 1.68rem; }
 
 a.navbar-brand span:first-child {
   color: #503392; }
@@ -70,15 +61,23 @@ a.nav-link {
 li.nav-item a.nav-link {
   border-radius: 0; }
 
+ul li.nav-item {
+  font-family: Lato-Regular;
+  font-size: 0.8rem;
+  padding-bottom: 2px;
+  letter-spacing: 1px; }
+
+ul li.nav-item.dropdown a#section.nav-link {
+  display: block; }
+
 ul li.nav-item:nth-child(1) {
-  padding-right: 10px;
-  border-bottom: 2px solid white; }
+  padding-right: 15px; }
 
 ul li.nav-item:nth-child(2) {
-  padding-right: 10px; }
+  padding-right: 15px; }
 
 ul li.nav-item:nth-child(3) {
-  padding-right: 10px; }
+  padding-right: 15px; }
 
 ul li.nav-item:nth-child(4) {
   padding-right: 20px; }
@@ -88,7 +87,7 @@ ul li.nav-item:nth-child(5) {
 
 ul li.nav-item:nth-child(5) div.input-group input.form-control, ul li.nav-item:nth-child(5) div.input-group div.input-group-append span#basic-addon2.input-group-text {
   border-radius: 0;
-  margin-top: 7px;
+  margin-top: 3px;
   height: 26px;
   background-color: #e8e4f1;
   border: 1px solid #e8e4f1; }
@@ -97,29 +96,104 @@ ul li.nav-item:nth-child(5) div.input-group div.input-group-append span#basic-ad
   width: 30px;
   transform: scale(0.44); }
 
+li.nav-item a.nav-link.active {
+  border-bottom: 2px solid black;
+  color: #000000;
+  background: white; }
+
+.nav-item.dropdown:hover > ul.dropdown-menu.multi-level {
+  display: block; }
+
+.dropdown-submenu {
+  position: relative; }
+
+.dropdown-submenu > .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  -webkit-border-radius: 0 6px 6px 6px;
+  -moz-border-radius: 0 6px 6px;
+  border-radius: 0 6px 6px 6px; }
+
+.dropdown-submenu:hover > .dropdown-menu {
+  display: block; }
+
+.dropdown-submenu > a:after {
+  display: none;
+  content: " ";
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #ccc;
+  margin-top: 5px;
+  margin-right: -10px; }
+
+.dropdown-submenu:hover > a:after {
+  border-left-color: #fff; }
+
+ul.dropdown-menu.multi-level {
+  border-radius: 0;
+  background: rgba(0, 0, 0, 0.5);
+  border-top: 2px solid #fff201;
+  left: 15px;
+  margin-top: 7px; }
+
+ul.dropdown-menu.multi-level li.dropdown-submenu ul.dropdown-menu {
+  border-radius: 0;
+  background: rgba(0, 0, 0, 0.5);
+  border-top: 2px solid #fff201;
+  margin-left: 1px; }
+
+ul.dropdown-menu.multi-level li a {
+  display: block;
+  color: #c7c6c6;
+  font-size: 0.8rem;
+  padding-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; }
+
+ul.dropdown-menu.multi-level li a::before {
+  content: '>';
+  position: relative; }
+
+ul.dropdown-menu.multi-level li a:hover::before {
+  content: '>>'; }
+
+ul.dropdown-menu.multi-level li a:hover {
+  color: #dfdf00; }
+
+ul.dropdown-menu.multi-level:hover li a {
+  text-decoration: none; }
+
 article.sub-header-slider div.carousel-caption.d-none.d-md-block {
-  margin-bottom: 225px; }
+  margin-bottom: 231px; }
 
 article.sub-header-slider div.carousel-caption.d-none.d-md-block p.creative-title {
-  font-size: 3.5rem; }
+  font-size: 3.5rem;
+  letter-spacing: 4px; }
 
 article.sub-header-slider div.carousel-caption.d-none.d-md-block p.creative-title span {
   color: #fff200;
   padding-left: 15px; }
 
 article.sub-header-slider div.carousel-caption.d-none.d-md-block p.creative-description {
-  padding-left: 150px;
-  padding-right: 150px;
-  opacity: 0.3; }
+  padding-left: 158px;
+  padding-right: 158px;
+  opacity: 0.5;
+  font-size: 0.90rem;
+  line-height: 1.6; }
 
 ol.carousel-indicators li {
+  position: relative;
   width: 5px;
   height: 5px;
-  border-radius: 50%; }
-
-div.container {
-  padding-left: 90px;
-  padding-right: 95px; }
+  border-radius: 50%;
+  top: -10px; }
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
@@ -127,7 +201,15 @@ div.container {
   width: 50px;
   background-size: 100%, 100%;
   background-image: none;
-  background-color: #d4d1d1; }
+  background-color: rgba(212, 209, 209, 0.65); }
+
+.carousel-control-prev-icon {
+  position: relative;
+  right: 50px; }
+
+.carousel-control-next-icon {
+  position: relative;
+  left: 48px; }
 
 .carousel-control-next-icon:after {
   content: '>';
@@ -177,16 +259,17 @@ article.our-producs div.title-our-products {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  top: -675px;
+  top: -679px;
   font-size: 1.9rem;
-  font-family: 'Lato Bold'; }
+  font-family: 'Lato'; }
 
 article.our-producs div.title-our-products span.our {
   color: #fff; }
 
 article.our-producs div.title-our-products span.products {
   color: #ffff00;
-  text-indent: 10px; }
+  text-indent: 10px;
+  letter-spacing: 1px; }
 
 article.our-producs ol.carousel-indicators li {
   width: 6px;
@@ -197,22 +280,181 @@ article.our-producs ol.carousel-indicators li {
 article.our-producs ol.carousel-indicators li.active {
   background-color: #503392; }
 
-.product1, .product2, .product3, .product4, .product5, .product6 {
-  transform: scale(0.7);
+.product1, .product2, .product3 {
+  position: relative;
+  top: 5px;
+  right: 3px;
+  transform: scale(0.84);
+  padding: 0;
+  margin: 0;
+  float: left;
+  margin-bottom: 40px; }
+
+.product4, .product5, .product6 {
+  position: relative;
+  top: 30px;
+  right: 3px;
+  transform: scale(0.84);
   padding: 0;
   margin: 0;
   float: left; }
 
-.product1, .product2, .product3 {
-  margin-bottom: 40px; }
-
-p.title-item, p.best-product-item,
-p.description-item {
+p.title-item-1,
+p.title-item-2,
+p.title-item-3,
+p.title-item-4,
+p.title-item-5,
+p.title-item-6,
+p.best-product-item-1,
+p.best-product-item-2,
+p.best-product-item-3,
+p.best-product-item-4,
+p.best-product-item-5,
+p.best-product-item-6,
+p.description-item-1,
+p.description-item-2,
+p.description-item-3,
+p.description-item-4,
+p.description-item-5,
+p.description-item-6 {
   color: black;
   text-align: left; }
 
+p.title-item-1, p.title-item-2, p.title-item-3 {
+  position: relative;
+  top: 27px;
+  left: 5px;
+  font-family: Lato-Heavy;
+  font-size: 1.3rem; }
+
+p.best-product-item-1, p.best-product-item-2, p.best-product-item-3 {
+  position: relative;
+  top: 12px;
+  left: 5px;
+  font-family: Lato-Regular;
+  color: #503392;
+  font-size: 0.86rem; }
+
+p.description-item-1, p.description-item-2, p.description-item-3 {
+  position: relative;
+  top: 4px;
+  left: 5px;
+  font-family: Lato-Light;
+  font-size: 0.7rem;
+  line-height: 20px; }
+
+p.title-item-4, p.title-item-5, p.title-item-6 {
+  position: relative;
+  top: 49px;
+  left: 5px;
+  font-family: Lato-Heavy;
+  font-size: 1.3rem; }
+
+p.best-product-item-4, p.best-product-item-5, p.best-product-item-6 {
+  position: relative;
+  left: 5px;
+  top: 36px;
+  font-family: Lato-Regular;
+  color: #503392;
+  font-size: 0.86rem; }
+
+p.description-item-4, p.description-item-5, p.description-item-6 {
+  position: relative;
+  top: 27px;
+  left: 5px;
+  font-family: Lato-Light;
+  font-size: 0.7rem;
+  line-height: 20px; }
+
+ol.carousel-indicators.products li {
+  position: relative;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  top: -34px; }
+
 article.our-producs div.carousel-caption.d-none.d-md-block {
-  margin-bottom: 100px; }
+  margin-bottom: 121px; }
+
+article.about-us div.container {
+  padding-left: 118px;
+  padding-right: 110px; }
+
+article.about-us p.about-us-title {
+  font-family: Lato-Bold;
+  font-size: 1.5rem; }
+
+article.about-us p.about-us-title span.about {
+  color: #009dda; }
+
+article.about-us p.about-us-title span.us {
+  position: relative;
+  color: #373737;
+  left: 5px; }
+
+article.about-us span.first-description {
+  font-family: Lato-Regular;
+  color: #a0a0a0; }
+
+article.about-us span.second-description {
+  position: relative;
+  font-family: Lato-Regular;
+  top: 20px;
+  color: #444444; }
+
+article.about-us div.container .row .col .row .col {
+  background: white;
+  padding-right: 41px; }
+
+article.about-us div.container .row .col {
+  background: #ffffff; }
+
+article.about-us div.container .row .col img {
+  position: relative;
+  transform: scale(0.64);
+  top: 14px;
+  left: 86px;
+  padding-left: 6px; }
+
+.progress-bar {
+  width: 0; }
+
+.progress .progress-bar {
+  transition: unset; }
+
+#skills {
+  margin-top: 45px; }
+
+article.about-us .photoshop-title,
+article.about-us .html-title,
+article.about-us .javascript-title,
+article.about-us .wordpress-title {
+  font-family: Lato-Bold;
+  color: #444444; }
+
+article.about-us span.percent {
+  float: right; }
+
+#skills .skill .progress {
+  overflow: visible;
+  background-color: #fff9f9;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  height: 6px;
+  margin-top: 20px;
+  border: 1px solid #ece7e7;
+  border-radius: 0;
+  padding: 1px; }
+
+#skills .skill .progress .progress-bar {
+  background-color: #498bfc;
+  position: relative;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+  padding: 1px; }
+
+#skills .skill + .skill {
+  margin-top: 35px; }
 
 article.get-in-touch {
   height: 231px;
@@ -276,74 +518,3 @@ article.socials div.container-fluid div.row div.col:nth-child(2) {
   flex-direction: row;
   justify-content: flex-end;
   margin-right: 14px; }
-
-.nav-pills li > a:hover, .nav-pills li > a:focus, .nav-pills li.active {
-  background-color: #ef9a38; }
-
-li.nav-item a.nav-link.active {
-  border-bottom: 2px solid #d9ff00;
-  color: #000000;
-  background: white; }
-
-article.about-us div.container {
-  padding-left: 118px;
-  padding-right: 110px; }
-
-article.about-us div.container .row .col .row .col {
-  background: white;
-  padding-right: 41px; }
-
-article.about-us div.container .row .col {
-  background: #ffffff; }
-
-article.about-us div.container .row .col img {
-  position: relative;
-  transform: scale(0.64);
-  top: 14px;
-  left: 86px;
-  padding-left: 6px; }
-
-.progress-bar {
-  width: 0; }
-
-.progress .progress-bar {
-  transition: unset; }
-
-.skill h4 {
-  color: #5f5d5d;
-  font-size: 22px;
-  font-weight: 400;
-  margin-bottom: 20px; }
-
-#skills .skill .progress {
-  overflow: visible;
-  background-color: #ddd;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  height: 5px; }
-
-#skills .skill .progress .progress-bar {
-  background-color: #498bfc;
-  position: relative;
-  -webkit-transition: all 1s ease;
-  transition: all 1s ease; }
-
-#skills .skill .progress .progress-bar .percent {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  border-radius: 50%;
-  text-align: center;
-  background-color: #498bfc;
-  -webkit-transform: scale(0);
-  -ms-transform: scale(0);
-  transform: scale(0);
-  top: -15px;
-  right: -20px;
-  font-size: 16px;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease; }
-
-#skills .skill + .skill {
-  margin-top: 35px; }
